feat(cart): enabled cart in app
