# docs/swagger.yaml
@@ -35,6 +35,94 @@ paths:
       summary: Root route
       tags:
       - root
+  /cart:
+    delete:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Clear user's cart
+      tags:
+      - сart
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Get user's cart
+      tags:
+      - сart
+  /cart/{product_id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Product ID
+        in: path
+        name: product_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Remove product from cart
+      tags:
+      - сart
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID of the product to add
+        in: path
+        name: product_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Add product to cart
+      tags:
+      - сart
   /login:
     post:
       consumes:
@@ -81,6 +169,8 @@ paths:
           description: Unauthorized
         "500":
           description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
       summary: Get list of products
       tags:
       - products
